# conduit

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .travis.yml  .uberenv_config.json  CHANGELOG.md  COPYRIGHT  COPYRIGHT_FILE_HEADER  LICENSE  README.md  api.html  appveyor.yml  azure-pipelines.yml  blueprint.html  blueprint_mcarray.html  blueprint_mesh.html  bootstrap-env.sh  building.html  circle.yaml  circle.yml  conduit.html  conduit_api.html  config-build.sh  copyright.txt  developer.html  genindex.html  glossary.html  hashes.txt  index.html  licenses.html  licenses.txt  notes.cpp  objects.inv  package.py  presentations.html  relay.html  relay_mpi.html  releases.html  run-tests.sh  (+14 more)
src/: CMakeLists.txt
src/CMake/: BasicChecks.cmake  BasicTypeChecks.cmake  CMakeBasics.cmake  FindNumPy.cmake  FindPython.cmake  FindRapidJSON.cmake  FindSilo.cmake  FindSphinx.cmake  Setup3rdParty.cmake  SetupDocs.cmake  SetupFortran.cmake  SetupIncludes.cmake  SetupTests.cmake  valgrind.supp
src/CMake/tests/: fortran_test_obj_support.f
src/blueprint/: Blueprint_Exports.hpp  CMakeLists.txt  blueprint.cpp  blueprint.hpp  blueprint_mesh.cpp  blueprint_mesh.hpp
src/cmake/: BasicTypeChecks.cmake  CMakeBasics.cmake  Setup3rdParty.cmake  SetupBLT.cmake  SetupFortran.cmake  SetupIncludes.cmake  SetupTests.cmake  asan.supp  conduit-config.cmake.in  conduit-deps-paths.cmake.in  lsan.supp  valgrind.supp
src/cmake/tests/: fortran_test_obj_support.f  fortran_test_obj_support.f90
src/conduit/: Array.cpp  Array.h  Bitwidth_Style_Types.h  Bitwidth_Style_Types.hpp  CMakeLists.txt  Conduit_Config.h.in  Conduit_Config.hpp.in  Conduit_Exports.h  Conduit_Exports.hpp  Core.cpp  Core.h  Core.hpp  DataArray.cpp  DataArray.h  DataArray.hpp  DataContainer.cpp  DataContainer.h  DataType.cpp  DataType.h  DataType.hpp  Endianness.cpp  Endianness.h  Endianness.hpp  Error.cpp  Error.h  Error.hpp  Generator.cpp  Generator.h  Generator.hpp  GhostNode.cpp  GhostNode.h  Node.cpp  Node.h  Node.hpp  NodeIterator.cpp  NodeIterator.h  NodeIterator.hpp  Schema.cpp  Schema.h  Schema.hpp  (+14 more)
src/conduit/python/: CMakeLists.txt  Conduit_Python_Exports.h  Conduit_Python_Exports.hpp  conduit_python.cpp
src/conduit_io/: CMakeLists.txt  Conduit_IO_Config.h.in  Conduit_IO_Config.hpp.in  Conduit_IO_Exports.h  Conduit_IO_Exports.hpp  conduit_io.cpp  conduit_io.h  conduit_io.hpp  conduit_silo.cpp  conduit_silo.h  conduit_silo.hpp
src/conduit_mesh/: CMakeLists.txt  Conduit_Mesh_Exports.hpp  conduit_mesh.cpp  conduit_mesh.hpp
src/conduit_mpi/: CMakeLists.txt  Conduit_MPI_Config.h.in  Conduit_MPI_Exports.h  Conduit_MPI_Exports.hpp  conduit_mpi.cpp  conduit_mpi.h  conduit_mpi.hpp
src/conduit_silo/: CMakeLists.txt  Conduit_Silo_Exports.h  conduit_silo.cpp  conduit_silo.h
src/conduit_viz/: CMakeLists.txt  Conduit_Viz_Config.h.in  Conduit_Viz_Config.hpp.in  Conduit_Viz_Exports.h  Conduit_Viz_Exports.hpp  conduit_viz.cpp  conduit_viz.h  conduit_viz.hpp
src/conduit_viz/client/: index.html  visualizer.css
src/config/: CMakeLists.txt  ConduitConfig.cmake.in  conduit_config.mk.in  conduit_setup_deps.cmake  conduit_setup_targets.cmake
src/debug/gdb/: conduit-gdb.py
src/debug/msvs/: ConduitNode.natvis
src/debug/totalview/: ConduitNode.tvd
src/docs/: CMakeLists.txt  Doxyfile.in
src/docs/doxygen/: CMakeLists.txt  Doxyfile.in
src/docs/sphinx/: CMakeLists.txt  api.rst  blueprint.rst  blueprint_carray.rst  blueprint_mcarray.rst  blueprint_mesh.rst  blueprint_mesh_partition.rst  blueprint_mesh_transform.rst  blueprint_o2mrelation.rst  blueprint_sarray.rst  blueprint_table.rst  building.rst  citing.rst  conduit.rst  conduit_api.rst  conduit_cpp_api.rst  conf.py  conf.py.in  developer.rst  developer_build_system.rst  developer_git_workflow.rst  developer_source_layout.rst  doxygen.rst  glossary.rst  index.rst  intro.rst  licenses.rst  presentations.rst  quick_start.rst  relay.rst  relay_io.rst  relay_mpi.rst  releases.rst  requirements.txt  t_conduit_docs_blueprint_demos_out.txt  t_conduit_docs_blueprint_examples_out.txt  t_conduit_docs_python_tutorial_basics_out.txt  t_conduit_docs_python_tutorial_json_out.txt  t_conduit_docs_python_tutorial_parse_out.txt  t_conduit_docs_python_tutorial_relay_io_handle_examples_out.txt  (+50 more)
src/docs/tutorial/: conduit_tutorial_intro.html  conduit_tutorial_intro.ipynb  conduitcppmagic.py
src/doxy/: Doxyfile.in
src/examples/: CMakeLists.txt
src/examples/conduitls/: CMakeLists.txt  conduitls.cpp
src/examples/cpp_fort_and_py/: CMakeLists.txt  SetupPython.cmake  conduit_cpp_and_py_ex.cpp  conduit_fort_and_py_ex.F90  conduit_fort_and_py_mod.F90  conduit_fort_and_py_mod.cpp  python_interpreter.cpp  python_interpreter.hpp
src/examples/python/: conduit_python_example.py
src/examples/staging/: CMakeLists.txt  conduit_staging.cpp  conduit_staging.json  conduit_staging.sh
src/examples/using-with-cmake/: CMakeLists.txt  FindConduit.cmake  conduit_example.cpp  example.cpp
src/examples/using-with-cmake-mpi/: CMakeLists.txt  conduit_mpi_example.cpp
src/examples/using-with-cmake-prefix-path/: CMakeLists.txt  conduit_example.cpp
src/executables/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/tests/: CMakeLists.txt  conduit_array.cpp  conduit_blueprint_smoke.cpp  conduit_bytestr.cpp  conduit_char8_str.cpp  conduit_datatype_tests.cpp  conduit_endianness.cpp  conduit_generator.cpp  conduit_ghost_node.cpp  conduit_io_binary.cpp  conduit_io_save_load.cpp  conduit_io_silo.cpp  conduit_io_smoke.cpp  conduit_json.cpp  conduit_json_sanitize.cpp  conduit_list_of.cpp  conduit_mesh_examples.cpp  conduit_mesh_smoke.cpp  conduit_mpi.cpp  conduit_mpi_smoke.cpp  conduit_node.cpp  conduit_node_binary_io.cpp  conduit_node_compact.cpp  conduit_node_info.cpp  conduit_node_iterator.cpp  conduit_node_parent.cpp  conduit_node_paths.cpp  conduit_node_save_load.cpp  conduit_node_set.cpp  conduit_node_update.cpp  conduit_serialize.cpp  conduit_silo_smoke.cpp  conduit_smoke.cpp  conduit_to_string.cpp  gpref_smoke.cpp  gtest_smoke.cpp  libb64_smoke.cpp  mpi_smoke.cpp  numpy_smoke.cpp  rapidjson_smoke.cpp  (+5 more)
(+1533 files in other folders)
