# Copyright (c) Lawrence Livermore National Security, LLC and other Conduit
# Project developers. See top-level LICENSE AND COPYRIGHT files for dates and
# other details. No copyright assignment is required to contribute to Conduit.

################################
# Add the conduit lib
################################
add_subdirectory(conduit)

################################
# Add the conduit relay libs
################################
add_subdirectory(relay)

################################
# Add the blueprint lib 
################################
add_subdirectory(blueprint)

